--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,126 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+html, body {
+    margin: 0;
+    height: 100vh;
+    width: 100%;
+  }
+  
+  body {
+    font-family: 'Quicksand', sans-serif;
+  }
+  
+  header {
+    width: 100%;
+    height: 100vh;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  #first{
+    width: 100%;
+    min-height: 100vh;
+    background-color: #0EC879;
+  }
+
+  #third{
+    background-color: #0EC879;
+  }
+  
+  #second{
+    background-color: #0EC879;
+  }
+
+  
+  .content {
+    width: 90%;
+    margin: 4em auto;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: justify;
+  }
+  
+  .logo {
+    position: fixed;
+    float: left;
+    margin: 16px 36px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 24px;
+  }
+  
+  nav {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+  }
+  
+  nav ul {
+    list-style: none;
+    background: rgba(0,0,0,0);
+    overflow: hidden;
+    color: #fff;
+    padding: 0;
+    text-align: center;
+    margin: 0;
+    transition: 1s;
+  }
+  
+  nav.black ul {
+    background: #000;
+  }
+  
+  nav ul li {
+    display: inline-block;
+    padding: 20px;
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+  }
+  
+  /*Menu icon CSS*/
+  .menu-icon {
+    width: 100%;
+    background: #000;
+    text-align: right;
+    box-sizing: border-box;
+    padding: 15px 24px;
+    cursor: pointer;
+    color: #fff;
+    display: none;
+  }
+  
+
+
+  /*Responsive design CSS*/
+  @media(max-width: 580px) {
+    .logo {
+      position: fixed;
+      top: 0;
+      margin-top: 16px;
+    }
+    
+    nav ul {
+      max-height: 0px;
+      background: #000;
+    }
+    
+    nav.black ul {
+      background: #000;
+    }
+    
+    .showing {
+      max-height: 20em;
+    }
+  
+    nav ul li {
+      box-sizing: border-box;
+      width: 100%;
+      padding: 24px 0px;
+      text-align: center;
+    }
+    
+    .menu-icon {
+      display: block;
+    }
+    
+  }
